2010-06-27  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* benchmarks/reviewers6-pureasp.dlv: Add benchmarks for 6, 7, and 8 submissions.
	* benchmarks/reviewers7-pureasp.dlv: Likewise.
	* benchmarks/reviewers8-pureasp.dlv: Likewise.
	* benchmarks/reviewers-pureasp.dlv: Likewise.

	* configure.ac: Sanitize AUTOMAKE_OPTIONS.
	* Makefile.am: Likewise.

2010-06-25  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* configure.ac: Bump version to 2.0.0.
	Add compiler settings info.

2010-06-23  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* README: Update.
	* MAINTAINER-README: Likewise.

	* Makefile.am (uninstall-local): Fix make uninstall when no-one
	called make install-html.

2010-06-22  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	Release version 1.7.0.

	* Makefile.am: Add support for make html and make install-html.

2010-06-21  Peter Schueller  <ps@kr.tuwien.ac.at>

	* testsuite/dlvhex/Makefile.am: Ensuring that testsuite uses
	the libraries that were built in the builddir.

2010-06-19  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/dlvhex/dlvhex.cpp: Add --version information.

	* src/dlvhex/PluginContainer.cpp (PluginContainer::importPlugins):
	Do not load duplicate plugins.

	* src/dlvhex/Makefile.am (dlvhex_LDFLAGS): Remove -static.

	* include/dlvhex/ASPSolver.tcc: Use @todo instead of TODO.

2010-06-18  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	Update copyright information.

	* doxygen.cfg: Update doxygen configuration via doxygen -u.

	* src/dlvhex/PluginContainer.cpp (PluginContainer::findplugins):
	Prevent loading of libdlvhexbase, this caused nasty duplicate
	global variables.

	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Use singleton
	instance methods.
	* src/dlvhex/dlvhex.cpp: Likewise.

	* dlvhex.pc.in: Install libdlvhexbase and libaspsolver in $libdir.
	* src/dlvhex/Makefile.am: Likewise.

	* configure.ac: Better configuration output.

	* NEWS: Update.

	* include/dlvhex/Term.h: Make Term::names and Term::namespaces
	private.